<resources>
    <string name="app_name">Moscow Guide</string>
    <string name="action_settings">Settings</string>

    <string name="rating_count"> (%s REVIEWS)</string>
    <string formatted="false" name="image_count">%s of %s</string>

    <string name="search_in">Search in</string>

    <string name="weather_forecast">Weather Forecast</string>
    <string name="about">About</string>
    <string name="home_sleep">Hotels</string>
    <string name="home_eat">Eat</string>
    <string name="home_enjoy">Enjoy</string>
    <string name="around_me">AROUND ME ?</string>
    <string name="home_menu_favs">Favorite Places</string>
    <string name="home_menu_rate">Leave Feedback</string>

    <!-- Single Place -->
    <string name="list_label_price_level">Price level</string>
    <string name="list_label_rating">Rating</string>

    <!-- Single Place -->
    <string name="place_detail_photos_counter">1 of 4</string>
    <string name="place_detail_label_address">ADDRESS</string>
    <string name="place_detail_label_phone">PHONE(s)</string>
    <string name="place_detail_label_tag">TAG(s)</string>
    <string name="place_detail_label_price_level">PRICE LEVEL</string>
    <string name="place_detail_label_no_value">-/-</string>
    <string name="place_detail_label_rating">RATING</string>

    <string name="no_internet_connection">Please connect to the network</string>

    <string name="no_weather">Weather Unavailable</string>

    <string name="town_range">Your are outside of %s</string>
    <string name="current_location_issue">Cannot find current location</string>

    <string name="google_api_key">AIzaSyB6D5TtNxPUA5r5M_7QFw7PHw_FYz0s4qs</string>
    <string name="your_are_here">You are here</string>
    <string name="turn_on_gps">Please turn on your GPS</string>

    <!-- Google Analytics ID: Replace this ID with yours -->
    <string name="tracker_id"></string>

    <!-- AdMob ID: Replace this ID with yours -->
    <string name="admob_id">ca-app-pub-6439944129756021/3806145596</string>
</resources>
