<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/home_bg"
    android:fillViewport="true">

    <RelativeLayout
        android:id="@+id/fra_home_main_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <LinearLayout
            android:id="@+id/fra_home_fake"
            android:layout_width="1px"
            android:layout_height="1px"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"/>

        <RelativeLayout
            android:id="@+id/fra_home_search_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fra_home_fake"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/search_bg"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp">

            <AutoCompleteTextView
                android:id="@+id/fra_home_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/fra_home_overflow_icon"
                android:background="@android:color/white"
                android:clickable="true"
                android:gravity="center_vertical|left"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:popupBackground="@android:color/white"
                android:singleLine="true"
                android:textColor="@color/text_color_1"
                android:textColorHint="@color/search_text_color"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/fra_home_overflow_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_home_overflow"/>

            <ProgressBar
                android:id="@+id/search_progress"
                style="?android:attr/progressBarStyleInverse"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:indeterminate="true"
                android:indeterminateTintMode="src_atop"
                android:indeterminateTint="@color/text_color_1"
                android:visibility="gone"
                />
        </RelativeLayout>


        <ImageView
            android:id="@+id/fra_home_app_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fra_home_search_container"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/home_app_icon"/>

        <TextView
            android:id="@+id/fra_home_town_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fra_home_app_icon"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:textSize="36sp"/>

        <TextView
            android:id="@+id/fra_home_country_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fra_home_town_name"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:textSize="26sp"/>

        <LinearLayout
            android:id="@+id/fra_home_container_types"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fra_home_country_name"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:id="@+id/fra_home_sleep_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:drawablePadding="10dp"
                android:drawableTop="@drawable/home_stay"
                android:gravity="center"
                android:text="@string/home_sleep"
                android:textColor="@android:color/white"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/fra_home_eat_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:drawablePadding="10dp"
                android:drawableTop="@drawable/home_eat"
                android:gravity="center"
                android:text="@string/home_eat"
                android:textColor="@android:color/white"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/fra_home_enjoy_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:drawablePadding="10dp"
                android:drawableTop="@drawable/home_enjoy"
                android:gravity="center"
                android:text="@string/home_enjoy"
                android:textColor="@android:color/white"
                android:textSize="20sp"/>

        </LinearLayout>

        <View
            android:id="@+id/fra_home_delimiter_1"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/fra_home_container_types"
            android:layout_marginTop="10dp"
            android:background="@android:color/white"/>

        <LinearLayout
            android:id="@+id/fra_home_weather_about_container"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_below="@id/fra_home_delimiter_1"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/fra_home_weather"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/fra_home_weather_icon"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"/>

                <TextView
                    android:id="@+id/fra_home_weather_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/fra_home_weather_icon"
                    android:layout_toRightOf="@id/fra_home_weather_icon"
                    android:textColor="@android:color/white"
                    android:textSize="30sp"/>

                <TextView
                    android:id="@+id/fra_home_weather_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/fra_home_weather_temp"
                    android:layout_toRightOf="@id/fra_home_weather_icon"
                    android:textColor="@android:color/white"
                    android:textSize="19sp"/>

                <ImageView
                    android:id="@+id/fra_home_no_weather_icon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_no_weather"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/fra_home_no_weather"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/fra_home_no_weather_icon"
                    android:text="@string/no_weather"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:visibility="gone"/>


            </RelativeLayout>

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@android:color/white"/>

            <LinearLayout
                android:id="@+id/fra_home_about_container"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.40"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/home_about"
                    android:drawablePadding="10dp"
                    android:gravity="center"
                    android:text="About"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"/>
            </LinearLayout>

        </LinearLayout>

        <View
            android:id="@+id/fra_home_delimiter_2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/fra_home_weather_about_container"
            android:background="@android:color/white"/>

        <LinearLayout
            android:id="@+id/fra_home_btn_nearby"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fra_home_delimiter_2"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/around_me_border"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/home_arround_me"
                android:gravity="center"
                android:text="@string/around_me"
                android:textColor="@android:color/white"
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fra_home_container_overflow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/fra_home_search_container"
            android:layout_below="@id/fra_home_search_container"
            android:layout_marginRight="5dp"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="10dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/fra_home_favs_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/home_menu_favs"
                android:textColor="@android:color/black"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/fra_home_rate_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/home_menu_rate"
                android:textColor="@android:color/black"
                android:textSize="18sp"/>

        </LinearLayout>
    </RelativeLayout>
</ScrollView>